Implement file upload and conversion features, enhance UI components, and add error handling

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,10 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WordToFile</title>
+    <meta
+      name="description"
+      content="Convert Word documents to PDF instantly with PUREPDF. Fast, secure, and completely free online document converter."
+    />
+    <meta
+      name="keywords"
+      content="word to pdf, document converter, pdf converter, online converter, free pdf converter"
+    />
+    <title>PUREPDF - Word to PDF Converter | Fast & Free Online Tool</title>
   </head>
   <body>
     <div id="root"></div>
